--- a/src/style.scss
+++ b/src/style.scss
@@ -8,13 +8,26 @@ $weight-heading-1: 800;
 $weight-heading-2: 600;
 
 $size-heading-1: 3rem;
-$size-heading-2: 1.75rem;
+$size-heading-2: 1.5rem;
 $size-heading-3: 1.25rem;
+$size-heading-1-tablet: 2.25rem;
+$size-heading-2-tablet: 1.25rem;
+$size-heading-3-tablet: 1rem;
+$size-heading-1-mobile: 1.5rem;
+$size-heading-2-mobile: 1rem;
+$size-heading-3-mobile: 1rem;
 $size-body: 1.1rem;
+$size-body-tablet: 0.9rem;
 $size-body-large: 2rem;
+$size-body-large-tablet: 1.5rem;
 
-$color-black: #1f2021;
+$color-black: #303030;
+$color-gray: #6f6f6f;
 $color-white: #fff;
+
+$mobile: 480px;
+$tablet: 768px;
+$desktop: 1024px;
 
 :root {
   font-family: $family-body;
@@ -50,10 +63,44 @@ main {
   z-index: 99;
 }
 
-nav {
-  align-items: center;
-  position: relative;
-  border-bottom: 2px dashed $color-white;
+.fade-in {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  background-color: $color-white;
+  z-index: 3000;
+  top: 0;
+  left: 0;
+  opacity: 1;
+  pointer-events: none;
+
+  transition: opacity 0.3s ease-in-out 0.3s;
+
+  &__active {
+    opacity: 0;
+  }
+}
+
+header {
+  // border-bottom: 1px dashed $color-white;
+
+  background-image: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 1) 33%,
+    rgba(255, 255, 255, 0) 0%
+  );
+  background-position: bottom;
+  background-size: 20px 2px;
+  background-repeat: repeat-x;
+
+  @media screen and (max-width: $tablet) {
+    background-image: linear-gradient(
+      to right,
+      rgba(255, 255, 255, 0.66) 33%,
+      rgba(255, 255, 255, 0) 0%
+    );
+    background-size: 20px 2px;
+  }
 }
 
 .background-scene-one {
@@ -110,33 +157,73 @@ nav {
     font-size: $size-heading-1;
     font-weight: $weight-heading-1;
     letter-spacing: -0.1rem;
+
+    @media (max-width: $desktop) {
+      font-size: $size-heading-1-tablet;
+    }
+
+    @media (max-width: $tablet) {
+      font-size: $size-heading-1-mobile;
+    }
   }
 
   &__2 {
     font-size: $size-heading-2;
-    font-weight: $weight-heading-2;
+    font-weight: $weight-heading-1;
+    letter-spacing: -0.1rem;
+
+    @media (max-width: $desktop) {
+      font-size: $size-heading-2-tablet;
+    }
+
+    @media (max-width: $tablet) {
+      font-size: $size-heading-2-mobile;
+    }
   }
 
   &__3 {
     font-size: $size-heading-3;
     font-weight: $weight-heading-1;
     letter-spacing: -0.1rem;
+
+    @media (max-width: $desktop) {
+      font-size: $size-heading-3-tablet;
+    }
+
+    @media (max-width: $tablet) {
+      font-size: $size-heading-3-mobile;
+    }
   }
 }
 
 .content {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  gap: 2rem;
+  position: relative;
+
+  @media (max-width: $desktop) {
+    top: -1.5rem;
+  }
 
   &__left {
-    grid-column: 2 / span 7;
-    grid-row: 3 / span 7;
+    grid-column: 2 / span 6;
+    grid-row: 3 / span 8;
+
+    @media (max-width: $tablet) {
+      grid-column: 2 / span 15;
+      grid-row: 3 / span 3;
+    }
   }
 
   &__right {
-    grid-column: 2 / span 10;
-    grid-row: 3 / span 5;
+    grid-column: 11 / span 6;
+    grid-row: 3 / span 8;
+
+    @media (max-width: $tablet) {
+      grid-column: 2 / span 15;
+      grid-row: 3 / span 3;
+    }
   }
 
   &__one,
@@ -147,11 +234,13 @@ nav {
     // this causes scene two and three to show up on load
     // maybe loading screen solves
     transition: all 0.4s ease-in-out;
+    z-index: 1;
 
     &--visible {
       opacity: 1;
       transform: translateX(0);
       transition: all 0.4s ease-in-out 0.8s;
+      z-index: 2;
     }
   }
 
@@ -168,6 +257,7 @@ nav {
     &--visible {
       opacity: 1;
       transform: translateX(0);
+      z-index: 2;
     }
   }
 
@@ -178,6 +268,7 @@ nav {
     &--visible {
       opacity: 1;
       transform: translateX(0);
+      z-index: 2;
     }
   }
 }
@@ -185,7 +276,7 @@ nav {
 .layout {
   display: grid;
   grid-template-columns: repeat(17, 1fr);
-  grid-template-rows: repeat(13, 1fr);
+  grid-template-rows: repeat(14, 1fr);
   height: 100vh;
   left: 0;
   position: fixed;
@@ -193,29 +284,26 @@ nav {
   width: 100vw;
   z-index: 110;
 
-  &__nav {
+  &__header {
     grid-template-rows: repeat(1, 1fr);
-    z-index: 150;
-    height: 7.7vh;
+    z-index: 200;
+    height: 7.14vh;
   }
 
   &__footer {
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: repeat(1, 1fr);
     bottom: 0;
     z-index: 150;
-    height: 15.4vh;
+    height: 7.14vh;
     top: auto;
   }
 }
 
-.copy {
-  //padding-top: 1rem;
-}
-
 .cta {
   display: flex;
-  gap: 1rem;
+  gap: 0.75rem;
   align-items: center;
+  height: 25px;
 
   &__right {
     justify-content: end;
@@ -240,10 +328,18 @@ nav {
   margin: 0;
   word-spacing: 0.05rem;
 
+  @media screen and (max-width: $desktop) {
+    font-size: $size-body-tablet;
+  }
+
   &--large {
     font-size: $size-body-large;
     letter-spacing: -0.1rem;
     width: auto;
+
+    @media screen and (max-width: $desktop) {
+      font-size: $size-body-large-tablet;
+    }
   }
 }
 
@@ -262,47 +358,127 @@ nav {
 }
 
 .logo-link {
+  align-self: center;
   grid-column: 2 / span 1;
   grid-row: 1 / span 1;
 }
 
 .nav-text {
-  grid-column: 3 / span 3;
+  align-self: center;
+  grid-column: 3 / span 85;
   grid-row: 1 / span 1;
 }
+
 .email-link {
-  justify-self: flex-end;
-  grid-column: 14 / span 3;
-  grid-row: 1 / span 2;
-  z-index: 10;
-  text-decoration: none;
-  font-size: $size-heading-3;
+  &__one,
+  &__two,
+  &__three {
+    grid-column: 14 / span 3;
+    grid-row: 1 / span 2;
+    justify-self: flex-end;
+    margin-bottom: 1rem;
+    opacity: 0;
+    text-decoration: none;
+    transition: all 0.4s ease-in-out;
+    z-index: 10;
 
-  &__scene-one {
-    color: #d6ffd4;
+    @media screen and (max-width: $tablet) {
+      margin-bottom: 0;
+    }
+
+    &--visible {
+      opacity: 1;
+      transition: all 0.4s ease-in-out;
+      z-index: 20;
+    }
   }
 
-  &__scene-two {
-    color: #96dadd;
+  &__one {
+    color: #0170bc;
+    &:hover {
+      color: #d6ffd4;
+    }
   }
 
-  &__scene-three {
-    color: #d7caa8;
+  &__two {
+    color: #150631;
+    &:hover {
+      color: #96dadd;
+    }
+  }
+
+  &__three {
+    color: #94371b;
+    &:hover {
+      color: #d7caa8;
+    }
   }
 }
 
-.resume-link {
-  grid-column: 2 / span 3;
-  grid-row: 1 / span 2;
-  z-index: 10;
+.resume-button {
+  &__one,
+  &__two,
+  &__three {
+    //border-radius: 3px;
+    //border: 2px solid $color-white;
+    background: transparent;
+    color: $color-white;
+    cursor: pointer;
+    font-family: $family-heading;
+    grid-column: 2 / span 2;
+    grid-row: 1 / span 2;
+    margin-bottom: 1rem;
+    opacity: 0;
+    padding: 0.25em 0.75em;
+    text-decoration: none;
+    transition: all 200ms ease-in-out;
+    width: fit-content;
+    z-index: 10;
+
+    @media screen and (max-width: $tablet) {
+      margin-bottom: 0;
+    }
+
+    &--visible {
+      opacity: 1;
+      transition: all 0.4s ease-in-out;
+      z-index: 20;
+    }
+  }
+
+  &__one {
+    color: #0170bc;
+    &:hover {
+      color: #d6ffd4;
+    }
+  }
+
+  &__two {
+    color: #150631;
+    &:hover {
+      color: #96dadd;
+    }
+  }
+
+  &__three {
+    color: #94371b;
+    &:hover {
+      color: #d7caa8;
+    }
+  }
 }
 
 .solid-white {
   background-color: $color-white;
   grid-column: 1 / span 17;
-  grid-row: 2 / span 1;
+  grid-row: 1 / span 1;
   height: 100%;
   width: 100%;
+  opacity: 1;
+
+  @media screen and (max-width: $tablet) {
+    opacity: 0.66;
+  }
 }
 
 .spacing {
@@ -328,27 +504,13 @@ nav {
 .shredies {
   filter: invert(100%);
   position: absolute;
-  transform: translateY(-2rem) scale(-1);
+  transform: translateY(-5.125rem) scale(-1);
 
   grid-column: 1 / span 17;
   grid-row: 1 / span 1;
-}
 
-.button {
-  background: transparent;
-  border-radius: 3px;
-  border: 2px solid $color-white;
-  color: $color-white;
-  cursor: pointer;
-  font-family: $family-heading;
-  margin: 0em;
-  padding: 0.25em 0.75em;
-  transition: all 200ms ease-in-out;
-
-  &:hover {
-    background: rgba(255, 255, 255, 0.25);
-    color: $color-white;
-    mix-blend-mode: darken;
+  @media screen and (max-width: $tablet) {
+    display: none;
   }
 }
 
@@ -362,6 +524,7 @@ footer {
 }
 
 .scroll-button {
+  display: inline-block;
   background: transparent;
   border-radius: 3px;
   border: 2px solid $color-white;
@@ -369,4 +532,125 @@ footer {
   cursor: pointer;
   font-family: $family-heading;
   margin: 0em;
+  transition: all 0.1s linear;
+  width: 1.75rem;
+
+  &:hover {
+    border-bottom: 5px solid $color-white;
+  }
+}
+
+.nav-logo-name-wrapper {
+  display: flex;
+  gap: 0.5rem;
+  flex-direction: row;
+  align-items: center;
+  justify-content: start;
+  grid-column: 2 / span 12;
+  grid-row: 1 / span 1;
+}
+
+//Hamburger
+
+.nav {
+  position: fixed;
+  background: $color-black;
+  color: $color-white;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
+  transform: translateX(100%);
+  transition: transform 250ms ease-in-out;
+}
+
+.nav-list {
+  list-style: none;
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  gap: 3rem;
+  align-items: flex-start;
+  margin: 0;
+  padding: 7.14vh 0 0 5.7vw;
+}
+
+.nav-link {
+  background: transparent;
+  border: none;
+  color: inherit;
+  text-decoration: none;
+  transition: color 0.2s ease-in-out;
+  cursor: pointer;
+  padding: 0;
+}
+
+.nav-link:hover {
+  color: $color-gray;
+}
+
+.nav-toggle {
+  background: transparent;
+  border: 0;
+  cursor: pointer;
+  grid-column: 16 / span 1;
+  grid-row: 1 / span 1;
+  justify-self: end;
+  padding: 0.5em;
+  z-index: 1000;
+}
+
+.nav-open .nav {
+  transform: translateX(63.46%);
+
+  @media screen and (max-width: $tablet) {
+    transform: translateX(46.64%);
+  }
+
+  @media screen and (max-width: $mobile) {
+    transform: translateX(0%);
+  }
+}
+
+.nav-open .hamburger {
+  transform: rotate(0.625turn);
+}
+
+.nav-open .hamburger::before {
+  transform: rotate(90deg) translateX(-12px);
+}
+
+.nav-open .hamburger::after {
+  opacity: 0;
+}
+
+.hamburger {
+  display: block;
+  position: relative;
+}
+
+.hamburger,
+.hamburger::before,
+.hamburger::after {
+  background: $color-white;
+  width: 2.5em;
+  height: 4px;
+  border-radius: 1em;
+  transition: all 250ms ease-in-out;
+}
+
+.hamburger::before,
+.hamburger::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+}
+
+.hamburger::before {
+  top: 12px;
+}
+.hamburger::after {
+  bottom: 12px;
 }
