--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&family=Asap:wght@400;600&display=swap");
 @import "./particles.scss";
+@import "./cgi.scss";
 
 $family-heading: "Montserrat", sans-serif;
 $family-body: "Asap", sans-serif;
